# harpie-numhask

./: .gitignore  ChangeLog.md  cabal.project  harpie-numhask.cabal  harry-numhask.cabal  readme.md  readme.org  stack.yaml
src/Harpie/: NumHask.hs
src/Harpie/NumHask/: Matrix.hs
src/Harry/: NumHask.hs
test/: doctests.hs
