cabal-version: 3.0
name: harpie-numhask
version: 0.1.1.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2024
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/harpie-numhask#readme
bug-reports: https://github.com/tonyday567/harpie-numhask/issues
synopsis: numhask shim for harpie.
description:
  This package provides orphans and interface into the [numhask](https://hackage.haskell.org/package/numhask) API for [harpie](https://hackage.haskell.org/package/harpie).

  == Usage

  >>> {-# LANGUAGE RebindableSyntax #-}
  >>> import NumHask.Prelude
  >>> import Harpie.Fixed as F
  >>> import Harpie.Numhask qualified as N

build-type: Simple
tested-with:
tested-with:
  ghc ==9.6.7
  ghc ==9.8.4
  ghc ==9.10.2
  ghc ==9.12.2

extra-doc-files: ChangeLog.md

source-repository head
  type: git
  location: https://github.com/tonyday567/harpie-numhask

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common ghc2024-additions
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    LambdaCase
    MonoLocalBinds
    RoleAnnotations

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    import: ghc2024-additions
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: src
  build-depends:
    adjunctions >=4.4.2 && <4.5,
    base >=4.14 && <5,
    first-class-families >=0.8 && <0.9,
    harpie >=0.1.0 && <0.3,
    numhask >=0.12 && <0.14,
    prettyprinter >=1.7.0 && <1.8,

  exposed-modules: Harpie.NumHask
