cabal-version: 3.0
name: harry-numhask
version: 0.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2024
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/numhask-array#readme
bug-reports: https://github.com/tonyday567/numhask-array/issues
synopsis: numhask shim for harry.
description:
    This package provides orphans and interface into the [numhask](https://hackage.haskell.org/package/numhask) API for [harry](https://hackage.haskell.org/package/harry).

    == Usage

    >>> {-# LANGUAGE RebindableSyntax #-}
    >>> import NumHask.Prelude
    >>> import Harry.Fixed as F

build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.8.2
    , GHC == 9.6.5
extra-doc-files: ChangeLog.md

source-repository head
    type: git
    location: https://github.com/tonyday567/numhask-array

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , harry
        , adjunctions
        , base         >=4.14 && <5
        , first-class-families >= 0.8 && <0.9
        , prettyprinter >=1.7 && <1.8
        , numhask      >=0.12 && <0.13
    exposed-modules:
        Harry.NumHask

test-suite doctests
    import: ghc2021-stanza
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: doctests.hs
    ghc-options: -threaded
    build-depends:
        , base
        , harry
        , harry-numhask
        , doctest-parallel >=0.3 && <0.4
    default-extensions: RebindableSyntax
